--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,15 @@
-<%= gravatar_image_tag(current_user.email) %>
-<h1><%= current_user.email %></h1>
-<h1><%= current_user.first_name %></h1>
+<div class='user_showpage'>
+    <div class='container'>
+        <div class='row '>
+            <div class='userinfo'>
+                <%= gravatar_image_tag(current_user.email) %>
+                <h3>Name: <%= full_name(current_user) %></h3>
+                <h3>Email: <%= current_user.email %></h3>
+                <h3>Birthday: <%= current_user.birthday %></h3>
+            </div>
+        </div>
+        <div>
+            <h1>Button area</h1>
+        </div>
+    </div>
+</div>
