--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,7 @@
   </head>
 
   <body>
-    <header>
-      <div class='container-fluid'>
+    <header class='container-fluid'>
         <div class='row'>
           <div class='logo'>
             <%= link_to image_tag("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTgzAsDTTWOlsX7cKfSVy9r6skIHikbx3V7eZxYg4aGe5wCmBUY", class: 'logo_img'), root_path %>
@@ -18,20 +17,19 @@
           <nav>
             <ul class="nav navbar-nav">
                 <% if current_user %>
-                <li><%= link_to gravatar_image_tag(current_user.email), current_user %></li>
+                <li><%= link_to gravatar_image_tag(current_user.email), current_user, class: 'nav_gravatar' %></li>
                 <% end %>
               <li><%= link_to "Home", root_path, class: 'home' %></li>
-              <li><%= link_to "Help", '#', class: 'help' %></li>
+              <li><%= link_to "Help", help_path, class: 'help' %></li>
               <% if current_user %>
-                <li><%= link_to "Log out", '#', class: 'logout' %></li>
+                <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'logout' %></li>
               <% else %>
-                <li><%= link_to 'Sign in', '#', class: 'signin' %></li>
-                <li><%= link_to 'Sign up', '#', class: 'signout' %></li>
+                <li><%= link_to 'Sign in', new_user_session_path, class: 'signin' %></li>
+                <li><%= link_to 'Sign up', new_user_registration_path, class: 'signup' %></li>
               <% end %>
             </ul>
           </nav>
         </div>
-      </div>
     </header>
     <div class='container-fluid'>
       <% if alert %>
@@ -42,9 +40,22 @@
     </div>
     
       <%= yield %>
-    
+      
     <div class='container-fluid'>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    
+    <footer class='container-fluid'>
+      <div class='row'>
+        <nav>
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Contect', contect_path, class: 'contect' %></li>
+          </ul>
+        </nav>
+      </div>
+        
+    </footer>
+    
+    
   </body>
 </html>
