fix check_box for user sign in

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -43,7 +43,7 @@
   
   <div class="field">
     <%= f.check_box("role", {}, "seller", "standard") %>
-    <%= f.label(:role, "Are you selling stuff?") %>
+    <%= f.label("role", "Are you selling stuff?") %>
   </div>
 
   <div class="actions">
