--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,20 +55,8 @@ header{
   }
 }
 
-
-
-.user_showpage{
-  .userinfo {
-    text-align: center;
-    margin-top: 20px;
-    
-    img {
-      width: 20%;
-      height: auto;
-    }
-    
-    
-  }
+main {
+  margin-top: 10px;
 }
 
 footer {
