--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,59 +3,22 @@
   <head>
     <title>OnlineStore</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
     <header class='container-fluid'>
-        <div class='row'>
-          <div class='logo'>
-            <%= link_to image_tag("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTgzAsDTTWOlsX7cKfSVy9r6skIHikbx3V7eZxYg4aGe5wCmBUY", class: 'logo_img'), root_path %>
-          </div>
-          <nav>
-            <ul class="nav navbar-nav">
-                <% if current_user %>
-                <li><%= link_to gravatar_image_tag(current_user.email), current_user, class: 'nav_gravatar' %></li>
-                <% end %>
-              <li><%= link_to "Home", root_path, class: 'home' %></li>
-              <li><%= link_to "Help", help_path, class: 'help' %></li>
-              <% if current_user %>
-                <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'logout' %></li>
-              <% else %>
-                <li><%= link_to 'Sign in', new_user_session_path, class: 'signin' %></li>
-                <li><%= link_to 'Sign up', new_user_registration_path, class: 'signup' %></li>
-              <% end %>
-            </ul>
-          </nav>
-        </div>
+      <%= render '/layouts/header' %>
     </header>
-    <div class='container-fluid'>
-      <% if alert %>
-        <p><%= alert %></p>
-      <% elsif notice %>
-        <p><%= notice %></p>
-      <% end %>
-    </div>
-    
+    <%= render 'layouts/message' %>
+    <main>
       <%= yield %>
-      
+    </main>
     <div class='container-fluid'>
       <%= debug(params) if Rails.env.development? %>
     </div>
-    
     <footer class='container-fluid'>
-      <div class='row'>
-        <nav>
-          <ul class="nav navbar-nav">
-            <li><%= link_to 'Contect', contect_path, class: 'contect' %></li>
-          </ul>
-        </nav>
-      </div>
-        
+      <%= render 'layouts/footer' %>
     </footer>
-    
-    
   </body>
 </html>
