--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,18 @@
-<div class='user_showpage'>
-    <div class='container'>
-        <div class='row '>
-            <div class='userinfo'>
-                <%= gravatar_image_tag(current_user.email) %>
-                <h3>Name: <%= full_name(current_user) %></h3>
-                <h3>Email: <%= current_user.email %></h3>
-                <h3>Birthday: <%= current_user.birthday %></h3>
-                <h3>Account status: <%= current_user.role %></h3>
-                <%= link_to 'Set up account', edit_user_registration_path, class: 'btn btn-info' %>
-                <%= link_to "Cancel account", user_registration_path, method: :delete, class: 'btn btn-danger' %>
-            </div>
-        </div>
-        <div>
-            <h1>Button area</h1>
-        </div>
+<div class='container'>
+  <div class='row '>
+    <div class='col-md-3 col-md-offset-3'>
+      <%= gravatar_image_tag(current_user.email, gravatar: { size: 235 } ) %>
     </div>
+    <div class='col-md-6'>
+      <h3>Name: <%= full_name(current_user) %></h3>
+      <h3>Email: <%= current_user.email %></h3>
+      <h3>Birthday: <%= current_user.birthday %></h3>
+      <h3>Account status: <%= current_user.role %></h3>
+      <%= link_to 'Set up account', edit_user_registration_path, class: 'btn btn-info' %>
+      <%= link_to "Cancel account", user_registration_path, method: :delete, class: 'btn btn-danger' %>
+    </div>
+  </div>
+  <div class='row'>
+    <%= link_to "Post New Product", new_item_path, class: 'btn btn-default' %>
+  </div>
 </div>
