--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,4 +15,10 @@
   <div class='row'>
     <%= link_to "Post New Product", new_item_path, class: 'btn btn-default' %>
   </div>
+  <div class='row'>
+      <%= current_user.items[2].title %>
+      <%= image_tag(current_user.items[2].photos[0].image.url) %>
+      <%= image_tag(current_user.items[2].photos[0].image.thumb.url) %>
+      <%= image_tag(current_user.items[2].photos[0].image.medium.url) %>
+  </div>
 </div>
