--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,21 +1,14 @@
 <div class='container-fluid'>
   <% if alert %>
-  <div class='row bg-danger'>
-    <div class='col-md-12'>
-      <h2><%= pluralize(alert.count, 'error') %></h2>
-      <ol>
-        <% alert.each do |t| %>
-          <li>
-            <h4><%= t %></h4>
-          </li>
-        <% end %>
-      </ol>
+    <div class='row bg-danger'>
+      <div class='col-md-12'>
+        <h4><%= alert %></h4>
+      </div>
     </div>
-  </div>
   <% elsif notice %>
   <div class='row  bg-info'>
     <div class='col-md-12'>
-      <p><%= notice %></p>
+      <h4><%= notice %></h4>
     </div>
   </div>  
   <% end %>
