--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
-<div class='row'>
-    <div class ='col-md-4'>
-        <h1 class='btn btn-default'>This is home page</h1>
+<div class='container'>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <h1>Welcome to Kim's Online Store</h1>
+        </div>
     </div>
 </div>
