--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<div class='container'>
+<div class='container-fluid user_show_page'>
   <div class='row '>
     <div class='col-md-3 col-md-offset-3'>
       <%= gravatar_image_tag(current_user.email, gravatar: { size: 235 } ) %>
     </div>
-    <div class='col-md-6'>
+    <div class='col-md-6 user_info'>
       <h3>Name: <%= full_name(current_user) %></h3>
       <h3>Email: <%= current_user.email %></h3>
       <h3>Birthday: <%= current_user.birthday %></h3>
@@ -12,13 +12,12 @@
       <%= link_to "Cancel account", user_registration_path, method: :delete, class: 'btn btn-danger' %>
     </div>
   </div>
-  <div class='row'>
-    <%= link_to "Post New Product", new_item_path, class: 'btn btn-default' %>
-  </div>
-  <div class='row'>
-      <%= current_user.items[2].title %>
-      <%= image_tag(current_user.items[2].photos[0].image.url) %>
-      <%= image_tag(current_user.items[2].photos[0].image.thumb.url) %>
-      <%= image_tag(current_user.items[2].photos[0].image.medium.url) %>
+  <div class='row user_show_controllpanel'>
+      <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
+      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
   </div>
 </div>
