--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,3 +120,32 @@ footer {
     margin-right: 15px;
   }
 }
+
+.categories_control_index {
+  
+  .categories_list {
+    margin: 20px 0;
+  }
+
+  .btn_area {
+    width: 100px;
+  }
+  
+  .btn_area {
+    width: 330px;
+  
+    .btn {
+      width: 100px;
+    }
+  }
+}
+
+.category_show_page {
+  .category_info {
+    th {
+      width: 200px;
+    }
+    
+  }
+  
+}
