--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
-  <nav>
-    <ul class="nav navbar-nav">
-      <li><%= link_to 'Contect', contect_path, class: 'contect' %></li>
-    </ul>
-  </nav>
+    <div class='col-md-12'>
+        <ul class="nav navbar-nav">
+            <li><%= link_to 'Contect', contect_path, class: 'contect' %></li>
+        </ul>
+    </div>
 </div>
