--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,10 +1,6 @@
-<div class='container'>
-    <div class='row'>
-        <div class='col.md.12 text-center'>
-            <h1>Update &lt<%= @category.title %>&gt's Informations</h1>
-        </div>
-        <div>
-            <%= render 'form' %>
-        </div>
+<div class='row'>
+    <div class='col-md-10 col-md-offset-1 text-center'>
+        <h1>Update &lt<%= @category.title %>&gt's Informations</h1>
     </div>
 </div>
+<%= render 'form' %>
