--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,39 +1,45 @@
-<div class='container categories_control_index'>
-  <div class='row'>
-    <div class='text-center'>
-      <h1>Categories List</h1>
-    </div>
-    <div class='text-center create_button'>
-      <%= link_to 'Add New Category', new_category_path, class: 'btn btn-success' %>
+<div class='categories_index'>
+    <div class='row'>
+        <div class=' col-md-10 col-md-offset-1 text-center'>
+            <h1>Categories List</h1>
+        </div>
+    </div>   
+    <div class='row'>
+        <div class='col-md-10 col-md-offset-1 text-center create_button'>
+            <%= link_to 'Add New Category', new_category_path, class: 'btn btn-success' %>
+        </div>
     </div>
     <% unless @categories.empty? %>
-      <div class='categories_list'>
-        <table class='table table-bordered'>
-          <% @categories.each_with_index do |category, index| %>
-            <tr>
-              <th class='text-center'>
-                <%= index + 1 %>.
-              </th>
-              <td>
-                <strong><%= category.title %></strong>
-              </td>
-              <td class='btn_area'>
-                Number of items: <%= category.items.count %>
-              </td>
-              <td class='btn_area'>
-                <%= link_to "Info", category_path(category), class: 'btn btn-default' %>
-                <%= link_to "Edit", edit_category_path(category), class: 'btn btn-info' %>
-                <%= link_to 'Delete', category_path(category), method: :delete, class: 'btn btn-danger' %>
-              </td>
-            </tr>
-          <% end %>
-        </table>
-      </div>
+         <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <table class='table table-bordered'>
+                    <% @categories.each_with_index do |category, index| %>
+                        <tr>
+                            <th class='text-center table_index'>
+                                <%= index + 1 %>.
+                            </th>
+                            <td class='table_title'>
+                                <strong><%= category.title %></strong>
+                            </td>
+                            <td class='table_number'>
+                                Number of items: <%= category.items.count %>
+                            </td>
+                            <td class='btn_area'>
+                                <%= link_to "Info", category_path(category), class: 'btn btn-default' %>
+                                <%= link_to "Edit", edit_category_path(category), class: 'btn btn-info' %>
+                                <%= link_to 'Delete', category_path(category), method: :delete, class: 'btn btn-danger' %>
+                            </td>
+                        </tr>
+                    <% end %>
+                </table>
+            </div>
+        </div>
     <% else %>
-      <div class='col-md-12 text-center'>
-        <h2>There's no category</h2>
-      </div>
+         <div class='row'>
+            <div class='col-md-12 text-center'>
+                <h2>There's no category</h2>
+            </div>
+        </div>
     <% end %>
-  </div>
 </div>
 
