--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,10 +1,6 @@
-<div class='container'>
-    <div class='row'>
-        <div class='col.md.12 text-center'>
-            <h1>Create New Category</h1>
-        </div>
-        <div>
-            <%= render 'form' %>
-        </div>
+<div class='row'>
+    <div class='col-md-12 text-center'>
+        <h1>Create New Category</h1>
     </div>
 </div>
+<%= render 'form' %>
