--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,30 +1,38 @@
-<div class='row'>
-  <%= bootstrap_form_for(@item) do |f| %>
-    <div class='col-md-12'>
-      <%= f.text_field :title, label: "Name of Product: " %>
-    </div>
-    <div class='col-md-4'>
-      <%= f.select :category_id, @categories, { label: "Category: "}%> 
-    </div>
-    <div class='col-md-4'>
-      <%= f.number_field :price, label: "Price: ", control_col: "col-md-2" %> 
-    </div>
-    <div class='col-md-4'>
-      <%= f.number_field :quantity, label: "Quantity: ", control_col: "col-md-2" %>
-    </div>
-    
-    <div class='col-md-12'>
-      <%= f.fields_for :photos do |photo| %>
-        <%= photo.label :photo %>
-        <%= photo.file_field :image %>
-      <% end %>
-    </div>
-    
-    <div class='col-md-12'>
-      <%= f.text_area :body, label: "Product's Informations: " %>
-    </div>
-    <div class='col-md-12'>
-      <%= f.submit "Submit" %>
-    </div>
-  <% end %>
+<div class='item_form'>
+    <%= bootstrap_form_for(@item) do |f| %>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <%= f.text_field :title, label: "Name of Product: " , autofocus: true %>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-4 col-md-offset-1'>
+                <%= f.select :category_id, @categories, { label: "Category: "}%> 
+            </div>
+            <div class='col-md-3'>
+                <%= f.number_field :price, label: "Price: " %> 
+            </div>
+            <div class='col-md-3'>
+                <%= f.number_field :quantity, label: "Quantity: " %>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <%= f.fields_for :photos do |photo| %>
+                    <%= photo.file_field :image%>
+                <% end %>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <%= f.text_area :body, label: "Product's Informations: " %>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <%= f.submit "Submit" %>
+                <%= link_to 'Back', url_for(:back), class: 'btn btn-default' %>
+            </div>
+        </div>
+    <% end %>
 </div>
