--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,40 +1,55 @@
-<div class='container-fluid text-center'>
-  <div class='row'>
-    <h1><%= current_user.username %>'s Products List</h1>
-    <%= link_to "Post a new product", new_item_path, class: 'btn btn-success' %>
-    <% if @items.empty? %>
-      <h3>You haven't post any product yet!</h3>
+<div class='text-center items_index'>
+    <div class='row'>
+        <div class='col-md-10 col-md-offset-1'>
+            <h1><%= current_user.username %>'s Products List</h1>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-10 col-md-offset-1'>
+            <%= link_to "Post a new product", new_item_path, class: 'btn btn-success' %>
+        </div>
+    </div>
+    <% unless @items.empty? %>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <h3>You have <%= pluralize(@items.count, 'product') %> in the list</h3>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <table class='table table-bordered'>
+                    <% @items.each_with_index do |item, index| %>
+                        <tr>
+                            <th class='text-center table_index'>
+                                <%= index + 1 %>.
+                            </th>
+                            <td class='table_img'>
+                                <% unless item.photos.empty? %> 
+                                    <%= image_tag(item.photos.first.image.medium.url) %>
+                                <% else %>
+                                    <%= image_tag("no_img.jpg", size: '100x100') %>
+                                <% end %>
+                            </td>
+                            <td class='table_title text-left'>
+                                <h5>Title: <%= item.title %></h5>
+                                <h5>Price: <%= item.price %></h5>
+                                <h5>Quantity: <%= item.quantity %></h5>
+                            </td>
+                            <td class='btn_area text-center'>
+                                <%= link_to 'Info', item_path(item), class: 'btn btn-default'%>
+                                <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-info'%>
+                                <%= link_to 'Delete', item_path(item), method: :delete, class: 'btn btn-danger' %>
+                            </td>
+                        </tr>
+                    <% end %>    
+                </table>
+            </div>
+        </div>
     <% else %>
-      <h3>You have <%= pluralize(@items.count, 'product') %> in the list</h3>
-      <div>
-        <% @items.each_with_index do |item, i| %>
-          <div class= 'col-md-7 control_product_list'>
-            
-            <div class='col-md-1 list_number'>
-              <h3><%= i + 1 %>.</h3>
+        <div class='row'>
+            <div class='col-md-10 col-md-offset-1'>
+                <h3>You haven't post any product yet!</h3>
             </div>
-            <div class='col-md-2'>
-              <%= image_tag(item.photos.first.image.medium.url) %>
-            </div>
-            <div class='col-md-9 text-left'>
-              <div class='col-md-9'>
-                <h4>Title: <%= item.title %></h4>
-              </div>
-              <div class='col-md-9'>
-                <h4 class='price'>Price: <%= item.price %></h4>
-                <h4 class='quantity'>Quantity: <%= item.quantity %></h4>
-              </div>
-              <div class='col-md-9'>
-                <%= link_to 'Show Info', '#', class: 'btn btn-info'%>
-                <%= link_to 'Edit', '#', class: 'btn btn-warning'%>
-                <%= link_to 'Delete', '#', class: 'btn btn-danger' %>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      </div>
+        </div>
     <% end %>
-  </div>
 </div>
-
-
