--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,35 @@
-<div class='container-fluid user_show_page'>
-  <div class='row '>
-    <div class='col-md-3 col-md-offset-3'>
-      <%= gravatar_image_tag(current_user.email, gravatar: { size: 235 } ) %>
+<div class='user_show_page'>
+    <div class='row user_info_area'>
+        <div class='col-md-6 user_img text-right'>
+            <%= gravatar_image_tag(current_user.email, gravatar: { size: 235 } ) %>
+        </div>
+        <div class='col-md-6 text-left'>
+            <h3>Name: <%= full_name(current_user) %></h3>
+            <h3>Email: <%= current_user.email %></h3>
+            <h3>Birthday: <%= current_user.birthday %></h3>
+            <h3>Account status: <%= current_user.role %></h3>
+            <%= link_to 'Set up account', edit_user_registration_path, class: 'btn btn-info' %>
+            <%= link_to "Cancel account", user_registration_path, method: :delete, class: 'btn btn-danger' %>
+        </div>
     </div>
-    <div class='col-md-6 user_info'>
-      <h3>Name: <%= full_name(current_user) %></h3>
-      <h3>Email: <%= current_user.email %></h3>
-      <h3>Birthday: <%= current_user.birthday %></h3>
-      <h3>Account status: <%= current_user.role %></h3>
-      <%= link_to 'Set up account', edit_user_registration_path, class: 'btn btn-info' %>
-      <%= link_to "Cancel account", user_registration_path, method: :delete, class: 'btn btn-danger' %>
+    <div class='row'>
+        <div class='col-md-10 col-md-offset-1 user_show_controllpanel'>
+                <% if current_user.admin? %>
+                <%= link_to "Categories", categories_path, class: 'btn btn-default col-md-2' %>
+            <% end %>
+            <% if current_user.seller? || current_user.admin? %>
+                <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
+            <% end %>
+            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+        </div>
     </div>
-  </div>
-  <div class='row user_show_controllpanel'>
-    <% if current_user.admin? %>
-      <%= link_to "Categories", categories_path, class: 'btn btn-default col-md-2' %>
-    <% end %>
-    <% if current_user.seller? || current_user.admin? %>
-      <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
-    <% end %>
-      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-      <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-  </div>
 </div>
