--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -32,8 +32,10 @@
                             </td>
                             <td class='table_title text-left'>
                                 <h5>Title: <%= item.title %></h5>
-                                <h5>Price: <%= item.price %></h5>
-                                <h5>Quantity: <%= item.quantity %></h5>
+                                <p>Price: $<%= item.price %></p>
+                                <p>Quantity: <%= item.quantity %></p>
+                                <p><%= link_to "Review: #{item.reviews.count}", item_reviews_path(item) %></p>
+                                <p>Average Rating: <%= average_rating(item) %></p>
                             </td>
                             <td class='btn_area text-center'>
                                 <%= link_to 'Info', item_path(item), class: 'btn btn-default'%>
