--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,12 +15,13 @@
     <div class='row'>
         <div class='col-md-10 col-md-offset-1 user_show_controllpanel'>
             <% if current_user.admin? %>
+                <%= link_to "All Users", users_path, class: 'btn btn-default col-md-2' %>
                 <%= link_to "Categories", categories_path, class: 'btn btn-default col-md-2' %>
             <% end %>
             <% if current_user.seller? || current_user.admin? %>
                 <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
             <% end %>
-            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
+            
             <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
