--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -35,7 +35,7 @@
                             <td class='table_img'>
                                 <%= gravatar_image_tag(review.user.email) %>
                             </td>
-                            <td class='table_riting text-center'>
+                            <td class='table_rating text-center'>
                                 <%= review.rating %>
                             </td>
                             <td class='table_body'>
