--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,7 +2,11 @@
     <div class='row'>
         <div class='col-md-10 col-md-offset-1'>
             <div class='col-md-5 text-right'>
-                <%= image_tag(@item.photos[0].image.url, class: 'product_img') %>
+                <% unless @item.photos.empty? %> 
+                    <%= image_tag(@item.photos[0].image.url, class: 'product_img') %>
+                <% else %>
+                    <%= image_tag("no_img.jpg", size: '420x420') %>
+                <% end %>
             </div>
             <div class='col-md-5'>
                 <h6>Category: <%= link_to "<#{@item.category.title}>", '#' %></h6>
@@ -21,7 +25,7 @@
                 <div class='btn_area'>
                     <%= link_to 'Buy Now', '#', class: 'btn btn-info'%>
                     <%= link_to 'Add to Cart', '#', class: 'btn btn-info'%>
-                    <%= link_to 'Add to Wish List', '#', class: 'btn btn-info'%>
+                    <%= link_to 'Add to Wish List', [@item, WishList.new], method: :post, class: 'btn btn-info'%>
                 </div>
             </div>
         </div>
