--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,8 +14,8 @@
                 <h3>Price: $<%= @item.price%></h3>
                 <% if @item.quantity < 4 %>
                     <h3 class='quantity_not_alot'>Only <%= @item.quantity %> Left</h3>
-                <% elsif @item.quantity === 0 %>
-                    <h3 class='out_of_stocK'>Out of Stocl.</h3>
+                <% elsif @item.quantity < 1 %>
+                    <h3 class='out_of_stocK'>Sold Out.</h3>
                 <% else %>
                      <h3 class='in_stock'>In Stock.</h3>
                 <% end %>
